--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 </head>
 <body class="styling">
     <header><section class="primary-dis">
-        <div class="logo-header"><div class="open-sans-normal">LOGO</div></div>
+        <nav class="logo-header"><div class="open-sans-normal">LOGO</div>
         <div class="button">
             <button class="btn-primary open-sans-normal2">Sign up</button>
-        </div>
+        </div></nav>
+        
     </section>
     <section class="stylin-12">
         <div class="para-sect open-sans-normal2 ">Cool Dark UI Template for Webflow Agencies!
