fixed banner item

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body class="styling">
     <header><section class="primary-dis">
-        <nav class="logo-header"><div class="open-sans-normal">LOGO</div>
-        <div class="button">
+        <nav class="logo-header"><li class="open-sans-normal">LOGO</li>
+        <li class="button">
             <button class="btn-primary open-sans-normal2">Sign up</button>
-        </div></nav>
+        </li></nav>
         
     </section>
     <section class="stylin-12">
