--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
 <div class="button">
     <button class="btn-primary open-sans-normal2">Stay Focused</button>
 </div>
-    </section>
+    </section> 
+   </header>
+    <main>
+         <section class="action">
+            <div class="tittle open-sans-normal2"><h3 class="tittle-bar" >See It in Action</h3>
+            <p class="tittle-desp open-sans-normal2">Explore the live preview and imagine your  </p><p class="tittle-desp open-sans-normal2" >brand in this bold new look.
+</p>
+<button class="btn-primary">Launch live preview</button></div>
+               
+            <div class="set-img"><img src="wc-mini.png" alt="" width="403px" height="328px"></div>
+</section > 
         
-    </header>
-    <main></main>
+    </main>
     <footer></footer>
 </body>
 </html>
