added productive user

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
                
             <div class="set-img"><img src="wc-mini.png" alt="" width="403px" height="328px"></div>
 </section > 
+<section class="second-banner">
+    <div><h3 class="second-tittle open-sans-normal2">Joined Thousands of Productive Users</h3></div>
+    <div class="user-info"><div><h2 class="INFO open-sans-normal">50K</h2>
+        <p class="info-para open-sans-normal">Active user</p></div>l
+        <div><h2 class="INFO open-sans-normal">2M+</h2>
+        <p class="info-para open-sans-normal" >Focus session</p></div>
+        <div><h2 class="INFO open-sans-normal">95%</h2>
+        <p class="info-para open-sans-normal">Satisfation Rate</p></div>
+    </div>
+</section>
         
     </main>
     <footer></footer>
