added review part

--- a/index.html
+++ b/index.html
@@ -47,6 +47,56 @@
         <p class="info-para open-sans-normal">Satisfation Rate</p></div>
     </div>
 </section>
+<section class="review">
+    <div class="third-tittle"><h2 class="tittle3 open-sans-normal2">What our users say</h2></div>
+   <div class="user-action"> <div class="user-say">
+        <div class="image-sec"><img src="/icon-star.png" alt="">
+            <img src="/icon-star.png" alt="">
+            <img src="/icon-star.png" alt="">
+             <img src="/icon-star.png" alt="">
+              <img src="/icon-star.png" alt="">
+        </div>
+        <div><h2 class="Designer">Loved by Designer</h2>
+        <p class="des-info">This template instantly leveled up our presence.” – Studio Vertex</p></div>
+      <div class="img-section1"> <div> <img src="/avatar.png" alt="">
+        </div>
+    <div><p class="Reviewer">Reviewer Name</p>
+    <p class="date">Date</p>
+</div>
+    </div>
+    </div> <div class="user-say">
+        <div class="image-sec"><img src="/icon-star.png" alt="">
+            <img src="/icon-star.png" alt="">
+            <img src="/icon-star.png" alt="">
+             <img src="/icon-star.png" alt="">
+              <img src="/icon-star.png" alt="">
+        </div>
+        <div><h2 class="Designer">Loved by Designer</h2>
+        <p class="des-info">This template instantly leveled up our presence.” – Studio Vertex</p></div>
+      <div class="img-section1"> <div> <img src="/avatar.png" alt="">
+        </div>
+    <div><p class="Reviewer">Reviewer Name</p>
+    <p class="date">Date</p>
+</div>
+    </div>
+    </div>
+ <div class="user-say">
+        <div class="image-sec"><img src="/icon-star.png" alt="">
+            <img src="/icon-star.png" alt="">
+            <img src="/icon-star.png" alt="">
+             <img src="/icon-star.png" alt="">
+              <img src="/icon-star.png" alt="">
+        </div>
+        <div><h2 class="Designer">Loved by Designer</h2>
+        <p class="des-info">This template instantly leveled up our presence.” – Studio Vertex</p></div>
+      <div class="img-section1"> <div> <img class="imgset" src="/avatar.png" alt="">
+        </div>
+    <div><p class="Reviewer">Reviewer Name</p>
+    <p class="date">Date</p>
+</div>
+    </div>
+    </div></div>
+</section>
         
     </main>
     <footer></footer>
