--- a/index.html
+++ b/index.html
@@ -97,7 +97,25 @@
     </div>
     </div></div>
 </section>
-        
+<section class="">
+    <div class="newtittle"><h2 class="title4 open-sans-normal2">Ready To focus better</h2>
+    <p class="para-title open-sans-normal2">This template instantly leveled up our presence.” – Studio Vertex</p>
+<button class="btn-primary">Get Started Free</button></div>
+<div class="imagenew"><img src="/wc-big.png" alt=""></div>
+</section>
+<section class="newsleter">
+<div class="newsl"><h2 class="gettouch  open-sans-normal2">Lets Get In Touch</h2></div>
+<div class="formbox"><form>
+    <label  for="Email"><p class="email1">Email</p></label>
+   <input type="email" name="" id="Email" placeholder="Example@email.com">
+   <label for="Name"><p class="email1">Name</p></label>
+  <input type="text" name="" id="" placeholder="full name">
+  <p class="email1">Message</p>
+     <textarea cols="80" rows="10px" placeholder="write your message"></textarea>
+      <input class="btn-primary" type="submit" value="Get in touch">
+</form></div><br>
+     
+</section>
     </main>
     <footer></footer>
 </body>
