--- a/index.html
+++ b/index.html
@@ -97,11 +97,12 @@
     </div>
     </div></div>
 </section>
-<section class="">
+<section class="focus">
     <div class="newtittle"><h2 class="title4 open-sans-normal2">Ready To focus better</h2>
     <p class="para-title open-sans-normal2">This template instantly leveled up our presence.” – Studio Vertex</p>
-<button class="btn-primary">Get Started Free</button></div>
-<div class="imagenew"><img src="/wc-big.png" alt=""></div>
+<button class="btn-primary">Get Started Free</button>
+<div class="imagenew"><img src="/wc-big.png" alt=""></div></div>
+
 </section>
 <section class="newsleter">
 <div class="newsl"><h2 class="gettouch  open-sans-normal2">Lets Get In Touch</h2></div>
@@ -117,6 +118,15 @@
      
 </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="logo11"><h2 class="LOGODES open-sans-normal" >LOGO</h2>
+        <p class="paragraph">Ready to elevate your online presence? Contact us today to discuss  </p>
+               <p class="paragraph"> your project and discover how we can bring your vision to life.</p>
+    <nav><ul><li><a href=""></a>Home</li>
+        <li><a href=""></a>About</li>
+    <li><a href=""></a>How it works</li>
+<li><a href=""></a>Services</li></ul></nav></div>
+        
+    </footer>
 </body>
 </html>
